Fix bug pdfinvoice re-open

--- a/app/code/Mageplaza/PdfInvoice/view/frontend/templates/handle/invoice/items_customize.phtml
+++ b/app/code/Mageplaza/PdfInvoice/view/frontend/templates/handle/invoice/items_customize.phtml
@@ -26,7 +26,7 @@
 <?php $_order = $block->getOrder() ?>
 <?php $isBarcode = $block->getItemBarcode() ?>
 <?php if ($_invoice && $_order): ?>
-    <table classs="table" style="font-size: 10px;">
+    <table classs="table" style="font-size: 10px; width: 100%;">
         <tr class="mp-row mp-heading">
             <td class="mp-netamt">
                 <span><?= /* @noEscape */ __('سعر الفعلي') ?></span>
