--- a/app/code/Simi/Simicustomize/view/frontend/email/simi_new_invoice_ar.html
+++ b/app/code/Simi/Simicustomize/view/frontend/email/simi_new_invoice_ar.html
@@ -24,7 +24,8 @@
 "var order": "Order",
 "var order_id": "Order DB Id",
 "var invoice_id": "Invoice DB Id",
-"var order_data.is_not_virtual": "Order Type"
+"var order_data.is_not_virtual": "Order Type",
+"var pwa_url: "PWA Studio Url"
 } @-->
 {{template config_path="siminiaconfig/custom_email/email_header_template"}}
 
@@ -35,7 +36,7 @@
                 <tr>
                     <td class="email-heading">
                         <h1>{{trans "Thank you for your order from"}} {{var store.frontend_name }}.</h1>
-                        <p>{{trans "You can check the status of your order by"}} <a href="{{store url="customer/account/"}}">{{trans "logging into your account"}}</a>.</p>
+                        <p>{{trans "You can check the status of your order by"}} <a href="{{var pwa_url}}"/account.html">{{trans "logging into your account"}}</a>.</p>
                     </td>
                     <td class="store-info">
                         <h4>{{trans "Order Questions"}}?</h4>
