--- a/app/code/Simi/Simicustomize/view/frontend/email/simi_new_shipment_eng.html
+++ b/app/code/Simi/Simicustomize/view/frontend/email/simi_new_shipment_eng.html
@@ -37,7 +37,7 @@
                 <tr>
                     <td class="email-heading">
                         <h1>{{trans "Thank you for your order from"}} {{var store.frontend_name }}.</h1>
-                        <p>{{trans "You can check the status of your order by"}} <a href="{{var pwa_url}}"/account.html">{{trans "logging into your account"}}</a>.</p>
+                        <p>{{trans "You can check the status of your order by"}} <a href="{{config path='simiconnector/general/pwa_studio_url'}}account.html">{{trans "logging into your account"}}</a>.</p>
                     </td>
                     <td class="store-info">
                         <h4>{{trans "Order Questions"}}?</h4>
