remove login image

--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Login/login.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Login/login.scss
@@ -2,7 +2,7 @@
     background-color: gray;
     padding: 25px;
     min-height: 1000px;
-    background-image: url('./login_bg_2.jpg');
+    // background-image: url('./login_bg_2.jpg');
     background-size: cover;
     background-position: top center;
     background-repeat: no-repeat;
