--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Navigation/navigation.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Navigation/navigation.css
@@ -131,6 +131,15 @@
     display: inline-block;
     padding: 0;
 }
+.top-menu {
+    display: flex;
+    align-items: center;
+}
+.separate-line {
+    width: 1px;
+    min-height: 31px;
+    background-color: #D5D5D5;
+}
 .list-menu-header {
     overflow-y: auto;
 }
@@ -145,7 +154,8 @@
 .list-menu-header .menu-title {
     font-size: 14px;
     margin-left: 10px;
-    margin-right: 10px;
+    line-height: 18px;
+    color: #333333;
 }
 .item-section {
     background-color: rgb(0,0,0,0.8);
