update brand html

--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Shopbybrand/components/brands/brands.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Shopbybrand/components/brands/brands.css
@@ -157,6 +157,12 @@
     justify-content: start;
 }
 
+@media (min-width: 768px) and (max-width: 1023px) {
+    .brandListContent {
+        justify-content: center;
+    }
+}
+
 .alphabetHeader {
     margin-top: 15px;
     padding-top: 10px;
