--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Cart/ProductListing/CartItem/cartItem.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Cart/ProductListing/CartItem/cartItem.scss
@@ -15,8 +15,14 @@ tr.simicart-siminia-cart-item {
                 display: inline-block;
                 margin-inline-end: 20px;
                 border-right: none;
+                width: 82px;
+                height: 82px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 img {
-                    width: 82px;
+                    max-width: 100%;
+                    max-height: 100%;
                 }
             }
             .name-and-option {
