--- a/app/code/Mageplaza/PdfInvoice/view/frontend/templates/handle/invoice/items_customize.phtml
+++ b/app/code/Mageplaza/PdfInvoice/view/frontend/templates/handle/invoice/items_customize.phtml
@@ -29,22 +29,22 @@
     <table classs="table" style="font-size: 10px; width: 100%;">
         <tr class="mp-row mp-heading">
             <td class="mp-netamt">
-                <span><?= /* @noEscape */ __('سعر الفعلي') ?></span>
+                <span><?= /* @noEscape */ __('المبلغ الصافي') ?></span>
             </td>
             <td class="mp-vatamt">
-                <span><?= /* @noEscape */ __('ضریبة') ?></span>
+                <span><?= /* @noEscape */ __('الضريبة') ?></span>
             </td>
             <td class="mp-disamt">
-                <span><?= /* @noEscape */ __('خصم') ?></span>
+                <span><?= /* @noEscape */ __('الخصم') ?></span>
             </td>
             <td class="mp-subtotal">
-                <span><?= /* @noEscape */ __('سعر الكامل') ?></span>
+                <span><?= /* @noEscape */ __('المبلغ الاجمالي') ?></span>
             </td>
             <td class="mp-price">
                 <span><?= /* @noEscape */ __('سعر الوحده') ?></span>
             </td>
             <td class="mp-qty">
-                <span><?= /* @noEscape */ __('كمیة') ?></span>
+                <span><?= /* @noEscape */ __('الكمية') ?></span>
             </td>
             <td class="mp-item">
                 <span><?= /* @noEscape */ __('وصف الصنف') ?></span>
@@ -73,7 +73,7 @@
                 <span><?= /* @noEscape */ __('Unit Price') ?></span>
             </td>
             <td class="mp-qty">
-                <span><?= /* @noEscape */ __('Qty') ?></span>
+                <span><?= /* @noEscape */ __('Quantity') ?></span>
             </td>
             <td class="mp-item">
                 <span><?= /* @noEscape */ __('Item Description') ?></span>
