--- a/app/code/Mageplaza/PdfInvoice/view/frontend/templates/handle/totals_customize.phtml
+++ b/app/code/Mageplaza/PdfInvoice/view/frontend/templates/handle/totals_customize.phtml
@@ -31,11 +31,11 @@ $_order = $block->getOrder();
 
 <?php 
 $arLabelMap = [
-    'subtotal' => ['en' => 'Gross Amount:', 'ar' => 'سعر الكامل'],
-    'discount' => ['en' => 'Total Discount:', 'ar' => 'خصم النھائي'],
-    'tax' => ['en' => 'Total VAT:', 'ar'=>'ضريبة'],
-    'shipping' => ['en' => 'Delivery Cost:', 'ar' => 'مصاريف التوصيل'],
-    'grand_total' => ['en' => 'Net Amount in KWD:', 'ar' => 'سعر النھائي']
+    'subtotal' => ['en' => 'Gross Amount:', 'ar' => 'المبلغ الاجمالي'],
+    'discount' => ['en' => 'Total Discount:', 'ar' => 'اجمالي الخصم'],
+    'tax' => ['en' => 'Total VAT:', 'ar'=>'الضريبة'],
+    'shipping' => ['en' => 'Delivery Cost:', 'ar' => 'تكلفة التوصيل'],
+    'grand_total' => ['en' => 'Net Amount in KWD:', 'ar' => 'المبلغ الصافي']
 ];
 
 // remap total
