--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/GridItem/item.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/GridItem/item.scss
@@ -9,3 +9,13 @@
         font-weight: bold;
     }
 }
+
+.siminia-product-grid-item {
+    .price-configurable {
+        .price-value {
+            .as-low-as {
+                margin-right: 5px;
+            }
+        }
+    }
+}
